Iterator<E>の型パラメータを明示指定。
NullIteratorは不要となったためdeprecatedに。